--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:rgb(148, 35, 129);
     min-height: 100vh;
-    background: linear-gradient(180deg, #38002c 0%, #1a1a1a 100%);
+    background: linear-gradient(180deg, #581358 0%, #420034 25%, #0a000c 100%);
     display: flex;
     flex-direction: column;
     position: relative;
@@ -50,7 +50,7 @@ body {
     height: 200px;
     width: 200px;
     border-radius: 50%;
-    box-shadow: 0 8px 30px rgba(249, 226, 255, 0.63);
+    box-shadow: 0 8px 30px rgba(197, 51, 112, 0.63);
     transition: transform 0.9 ease;
 }
 
@@ -70,4 +70,30 @@ body {
     margin-left: 30px;
     margin-right: 30px;
     text-shadow: 0 4px 15px rgba(132, 20, 160, 0.63);
+}
+
+.portfolio-section {
+    margin: 25px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.portfolio-item {
+    background-color: rgba(85, 10, 104, 0.63);
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 6px 30px rgba(197, 51, 112, 0.63);
+    width: 65%;
+    text-align: center;
+    transition: transform 0.3s ease;
+}
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: #0a000c;
+    text-align: center;
+    padding: 10px;
 }
